fixes card width on mobile
I’m not really sure why we had this line, has something to do with the old way to make the cards the right size on smaller screens I think.

--- a/src/app/components/topic-list/topic-list.component.scss
+++ b/src/app/components/topic-list/topic-list.component.scss
@@ -6,7 +6,6 @@
 
 .card {
     transition: transform .2s;
-    width: 375px;
     max-width: 375px;
 
     .image {
